deployment-PROD.yaml
#frontend
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bitsenbytes-frontend-prod
  namespace: bitsenbytes-management-platform
spec:
  replicas: 3
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: bitsenbytes-frontend-prod
  template:
    metadata:
      labels:
        app: bitsenbytes-frontend-prod
    spec:
      containers:
        - name: bitsenbytes-frontend-prod
          image: docker-registry.bitsenbytes.net/managementplatform:bitsenbytesfrontendPROD_0.0.4
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: bitsenbytes-frontend-prod
  namespace: bitsenbytes-management-platform
spec:
  selector:
    app: bitsenbytes-frontend-prod
  ports:
    - port: 8080
      targetPort: 80
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bitsenbytes-prod
  namespace: bitsenbytes-management-platform
spec:
  rules:
    - host: management.bitsenbytes.net
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: bitsenbytes-backend-prod
                port:
                  number: 3000

          - path: /
            pathType: Prefix
            backend:
              service:
                name: bitsenbytes-frontend-prod
                port:
                  number: 8080
---
#backend
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bitsenbytes-backend-prod
  namespace: bitsenbytes-management-platform
spec:
  replicas: 3
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: bitsenbytes-backend-prod
  template:
    metadata:
      labels:
        app: bitsenbytes-backend-prod
    spec:
      containers:
        - name: bitsenbytes-backend-prod
          image: docker-registry.bitsenbytes.net/managementplatform:bitsenbytesbackendPROD_0.0.2_test_deployment_3
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: bitsenbytes-backend-prod
  namespace: bitsenbytes-management-platform
spec:
  selector:
    app: bitsenbytes-backend-prod
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
---

#Mysql

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bitsenbytes-mysql
  namespace: bitsenbytes-management-platform
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: bitsenbytes-mysql
  template:
    metadata:
      labels:
        app: bitsenbytes-mysql
    spec:
      containers:
        - name: bitsenbytes-mysql
          image: mysql:8.0
          imagePullPolicy: Always
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql

      volumes:
        - name: mysql-data
          persistentVolumeClaim:
            claimName: bitsenbytes-mysql-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: bitsenbytes-mysql
  namespace: bitsenbytes-management-platform
spec:
  type: ClusterIP
  selector:
    app: bitsenbytes-mysql
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306

---
apiVersion: v1
kind: Service
metadata:
  name: bitsenbytes-mysql-nodeport
  namespace: bitsenbytes-management-platform
spec:
  type: NodePort
  selector:
    app: bitsenbytes-mysql
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
      nodePort: 30306
