deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bitsenbytes-frontend
  namespace: bitsenbytes-management-platform
spec:
  replicas: 3
  selector:
    matchLabels:
      app: bitsenbytes-frontend
  template:
    metadata:
      labels:
        app: bitsenbytes-frontend
    spec:
      containers:
        - name: bitsenbytes-frontend
          image: docker-registry.bitsenbytes.net/managementplatform:bitsenbytesfrontend_0.0.5
          imagePullPolicy: Always
          workingDir: /usr/src
          command:
            - sh
            - -c
            - |
              set -e
              cd /usr/src/frontend
              npm run dev -- --host 0.0.0.0
          ports:
            - containerPort: 5173
---
apiVersion: v1
kind: Service
metadata:
  name: bitsenbytes-frontend
  namespace: bitsenbytes-management-platform
spec:
  selector:
    app: bitsenbytes-frontend
  ports:
    - port: 80
      targetPort: 5173
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bitsenbytes-frontend
  namespace: bitsenbytes-management-platform
spec:
  rules:
    - host: managementplatform.bitsenbytes.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bitsenbytes-frontend
                port:
                  number: 80
